--- a/test_api/compose.yaml
+++ b/test_api/compose.yaml
@@ -1,6 +1,6 @@
 # Comments are provided throughout this file to help you get started.
-# If you need more help, visit the Docker Compose reference guide at
-# https://docs.docker.com/go/compose-spec-reference/
+# If you need more help, visit the Docker compose reference guide at
+# https://docs.docker.com/compose/compose-file/
 
 # Here the instructions define your application as a service called "server".
 # This service is built from the Dockerfile in the current directory.
@@ -13,6 +13,7 @@ services:
       context: .
     ports:
       - 5000:5000
+
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
